# bitwarden-alias-provider

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.example.yml  flake.nix
.github/workflows/: publish.yml
server/: .gitignore  Dockerfile  app.py  pyproject.toml
server/providers/: mxroute.py  provider.py  purelymail.py
web/: index.html  nginx.conf.template  package.json
web/public/: manifest.json
web/src/: App.tsx
web/src/components/: OptionsPopup.tsx
web/src/utils/: alias.ts
