[project]
name = "bitwarden-alias-provider-server"
version = "0.1.0"
description = "Bitwarden Alias Provider Server"
requires-python = ">=3.12"
dependencies = [
    "coolname>=4.0.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
